add docs.rs, remove incorrect launch configuration

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 description = "A crate to programmatically invoke debugging breakpoints with helping macros"
 repository = "https://github.com/greymattergames/unbug"
+documentation = "https://docs.rs/unbug"
 license = "MIT OR Apache-2.0"
 keywords = ["debug", "debugging", "ensure", "assert", "breakpoint"]
 authors = [
