--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,16 +9,14 @@ license = "MIT OR Apache-2.0"
 keywords = ["debug", "debugging", "ensure", "assert", "breakpoint"]
 authors = [
   "Brian Jesse <brian@greymattergames.net>",
+  "Scott Girton <scott@greymattergames.net>"
 ]
 categories = ["development-tools::debugging"]
 exclude = [".vscode/", "assets/"]
 
-[features]
-default = []
-enable = []
-
 [dependencies]
 tracing = "0.1"
+dbg_breakpoint = "0.1.0"
 
 [[example]]
 name = "basic"
